--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   letter-spacing: 1px;
 }
 .title h2 {
-  margin-top: 50px;
+  margin-top: 45px;
   letter-spacing: 1px;
   font-size: 2.6rem;
 }
@@ -58,6 +58,8 @@ input {
   padding: 50% 0;
   position: relative;
   opacity: 0.8;
+  border: 4px solid red;
+
 }
 
 .collection img {
@@ -85,47 +87,29 @@ input {
   max-height: 60%;
   max-width: 60%;
   margin: auto;
+  object-fit: contain;
   transform: translate(0, 40%);
   box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
   border: 3px solid white;
 }
 
-
-
-
-
-
-
-
-
-
-
-/* .svg {
-  -webkit-animation: slide-top 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
-  animation: slide-top 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
-}
-
-@-webkit-keyframes svg {
-  0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-  100% {
-    -webkit-transform: translateY(-100px);
-            transform: translateY(-100px);
-  }
-}
-@keyframes svg {
-  0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-  100% {
-    -webkit-transform: translateY(-100px);
-            transform: translateY(-100px);
-  }
-} */
-
 .svg:hover{
-  transform: scale(0.7);
+  fill: #69f75c;
+  transition: all .3s ease;
+}
+
+.trashimg{
+  border: 1px solid red;
+  display: flex;
+  position: absolute;
+  z-index: 2;
+  justify-content: flex-end;
+
+}
+.trash{
+  border: 1px solid;
+  display: block;
+  position: absolute;
+  float: right;
+  height: 30px;
 }
