updated framer motion

--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,8 @@ input {
   position: absolute;
   top: 0;
   left: 0;
+  cursor: pointer;
+
 }
 
 /* modal styles */
@@ -113,6 +115,7 @@ input {
   transform: translate(0, 40%);
   box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
   border: 3px solid white;
+  cursor: pointer;
 }
 
 .svg {
